# haron

./: .gitignore  Cargo.toml  LICENSE  arch.plantuml
haron/: Cargo.toml
haron-parser/: Cargo.toml
haron-parser/benches/: benches_main.rs  misc.rs  parser.rs
haron-parser/src/: lib.rs
haron-parser/src/misc/: core.rs  mod.rs  tests.rs
haron-parser/src/parser/: bench.rs  mod.rs  tests.rs
haron-parser/src/types/: mod.rs
haron-parser/src/types/addressing_mode/: mod.rs  tests.rs
haron-parser/src/types/instruction/: mod.rs  tests.rs
haron-parser/src/types/op_code/: mod.rs  tests.rs
haron-parser/src/types/op_code_modifier/: mod.rs  tests.rs
haron-parser/src/types/operand/: mod.rs  tests.rs
haron/src/: main.rs
src/: main.rs
src/parser/: mod.rs
src/types/: addressing_mode.rs  instruction.rs  mod.rs  op_code.rs  operand.rs
